# dfin

./: .coveragerc  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml  python-publish-alias.yml  python-publish-test-alias.yml  python-publish-test.yml  python-publish.yml
src/dfin/: main.py
src/dfin/app/: utils.py  💰_dFin.py
src/dfin/app/pages/: 001_📈_Performance.py  002_📅_Options.py  003_🤑_Volatility_Smile.py
src/dfin/optimize/: __init__.py  gradient_descent.py  halley.py  lbfgs.py  newton.py  secant.py
src/dfin/options/: bs_vanilla.h  bs_vanilla.py  bsiv_boost.h  bsiv_scipy.py  iv_boost.cpp  iv_scipy.py  iv_torch.py
src/dfin/options/tests/: test_bs_pytorch.py  test_bs_torch.py  test_bs_vanilla.py  test_bsiv_scipy.py  test_iv_scipy.py  test_iv_torch.py
src/options/: README.md  bs_pytorch.py  bs_vanilla.cpp  bs_vanilla.py
src/options/tests/: test_bs_pytorch.py  test_bs_vanilla.py  test_bsiv_scipy.py
