[build-system]
requires = [
    "setuptools>=61",
    "setuptools_scm[toml]>=7",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "dfin"
# name = "dfinance"
# version = "v0.0.2"
dynamic = ["version"]
authors = [
  { name="Tin Kei Cheng" },
]
description = "A random assortment of Quantitative Finance algorithms that are implemented to be differentiable."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Intended Audience :: Financial and Insurance Industry",
    "Typing :: Typed",
]
dependencies = [
    "torch",
    "scipy",
    "matplotlib",
    "yfinance",
    "requests-cache",
    "requests-ratelimiter",
    "streamlit>=1.10.0",
]
keywords = [
    "quant",
    "quantitative finance",
    "black-scholes",
    "option pricing",
    "implied volatility",
    "volatility",
    "autograd",
]

[project.scripts]
dfin = "dfin.main:main_cli"

[project.urls]
"Homepage" = "https://github.com/tinkei/dfin/wiki"
"Repository" = "https://github.com/tinkei/dfin"
"Bug Tracker" = "https://github.com/tinkei/dfin/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = [
    "*.csv",
    "*.xls",
    "*.xlsx",
    "*.ipynb",
]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
write_to = "src/dfin/_version.py"
